# docs/swagger.json
@@ -8,6 +8,52 @@
     },
     "host": "localhost:1323",
     "paths": {
+        "/admin/deductions/personal": {
+            "post": {
+                "description": "Update personal deduction",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tax"
+                ],
+                "summary": "Update personal deduction",
+                "parameters": [
+                    {
+                        "description": "Body for update personal deduction",
+                        "name": "UpdatePersonalDeductionRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/tax.UpdatePersonalDeductionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/tax.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/tax.Err"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/tax.Err"
+                        }
+                    }
+                }
+            }
+        },
         "/tax/calculations": {
             "post": {
                 "description": "Calculate Tax",
@@ -152,6 +198,10 @@
                     "items": {
                         "$ref": "#/definitions/tax.TaxLevelResponse"
                     }
+                },
+                "taxRefund": {
+                    "type": "number",
+                    "example": 29000
                 }
             }
         },
@@ -165,6 +215,15 @@
                 "tax": {
                     "type": "number",
                     "example": 0
+                }
+            }
+        },
+        "tax.UpdatePersonalDeductionRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number",
+                    "example": 29000
                 }
             }
         }
